--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-  "token": "NDQ0OTM4ODAzNDcyMjM2NTQ1.DdjNEw.sjERWqIV2Mjwt58zf4I2r_bYuIs",
-  "prefix": "{"
+  "token": "NDQ0OTM4ODAzNDcyMjM2NTQ1.Dd-MZw.lzOqNf6pF_6qdM9DmWtZ7r6gCKw",
+  "prefix": "!"
 }
